--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   run-test:
-    runs-on: [self-hosted, linux]
+    runs-on: linux
     steps:
       - name: Checkout
         uses: actions/checkout@v2
