--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   run-test:
-    runs-on: linux
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -12,6 +12,6 @@ jobs:
         uses: actions/setup-java@v2
         with:
           distribution: temurin
-          java-version: 8
+          java-version: 17
       - name: Build and Test
         run: sbt -v test
