--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,12 @@
-my-app {
+kafka-ra {
   routes {
     # If ask takes more time than this to complete the request is failed
     ask-timeout = 5s
   }
+}
+
+kafka {
+   bootstrap.servers = "127.0.0.1:9092"
+   request.timeout.ms = 12000
+   client_id = "kra"
 }
